0027008: Visualization - polygonal selection algorithm does not work with MeshVS_Mesh

- correct calculation of normals for SelectMgr_TriangularFrustum;
- test case for issue #27008